--- a/mypopor/public/manifest.json
+++ b/mypopor/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "<test App>",
-  "short_name": "<test App>",
+  "name": "<Portfolio App>",
+  "short_name": "<KYJ App>",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
